--- a/Proposal/aboutauthor.tex
+++ b/Proposal/aboutauthor.tex
@@ -6,7 +6,7 @@ My name is \textsf{Jiuning Chen}, a third-year student in the School of Mathemat
 
 40+ hours per week can be guaranteed on this project since there's no other internship or vacation plan this summer. After GSoC, at least 20+ hours per week can be guaranteed to continue the long-term \images{} \version{1.0} project -- no compulsory work in the first academic year as Ph.D student. \par
 
-I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions as a member of this community. To better pull this project off, I've been accepted as the member of \juliaimages.
+I learned \langjulia in Aug 2018 and become a contributor to \langjulia community since Oct 2018, and plan to make more contributions as a member of this community. To better pull this project off, I've been accepted as a member of \juliaimages.
 
 \subsection*{Contribution to the community}
 My main interest is to improve the \images, in the meantime, there are some small patches to \flux{} and \textsf{julia}. The major part of my contribution to \textsf{\juliaimages} is on issues: 26\% pull requests, 46\% issues, 18\% commits, 10\% code reviews. This is because I don't think \images{} is at its good status for new features until we achieve this GSoC project's expectations.
