--- a/Proposal/project.tex
+++ b/Proposal/project.tex
@@ -1,8 +1,8 @@
 % !TEX root = ./main.tex
 
-\section{Description}\label{sec:project}
+\section{Introduction}\label{sec:project}
 
-\subsection*{Project Background}
+\subsection{Background}
 
 \repoimages{} is a \langjulia image-processing toolbox that provides a collection of out-of-box functions\footnote{An overview of currently implemented image-processing functionalities is shown at \apicomparison.} to do image processing tasks just like \reposcikitimage{} and \matlabimageprocessing{} do.
 
@@ -51,7 +51,7 @@ Packages such as \repohistogramthresholding and \repoimagebinarization are examp
 
 
 \newpage
-\subsection*{Project Expectation}
+\subsection{Expectation}
 With these existing work, it's in the right time to revisit the whole \images{} ecosystem and head towards a more easy-to-use \images{} package, and more ambitiously, towards \images{} \version{1.0}. This project aims to solve this problem by:
 \begin{enumerate}
     \item providing more comprehensive and integrated documentation on both style guide and ecosystem illustration, and
